# Binoculars

./: pyproject.toml  requirements.txt
binoculars/: detector.py
binoculars-llama/: check_detector.py  detector.py
binoculars_llama/: __init__.py  detector.py  metrics.py  requirements.txt  rpc.py
distributed/agent/: .env  agent.py  requirements.txt
distributed/client/: client.py
runpod-worker/: Dockerfile  handler.py  test_input.json
